--- a/index.html
+++ b/index.html
@@ -1,20 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>G3-Architects-Website</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;500;600;700;800&family=Work+Sans:wght@400;500;600;700;800&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="styles/style.css">
 </head>
+
 <body>
     <header>
+        <nav class="navigation-bar">
+            <h3 class="nav-tittle">G3 Architects</h3>
+            <ul>
+                <li><a href="">Home</a></li>
+                <li><a href="">About</a></li>
+                <li><a href="">Contuct us</a></li>
+                <li><a href="">Login</a></li>
+            </ul>
+        </nav>
+        <div class="banner">
+            <div class="banner-content">
+                <h2 class="banner-tittle">Brand New <br>
+                    Group of Architects
+                </h2>
+                <p class="banner-para">There are many variations of passages of Lorem Ipsum available, but the majority
+                    have suffered alteration in some form, by injected humour, or randomised words which don't look even
+                </p>
+                <button class="btn-primary">Explore More</button>
+            </div>
+            <div class="banner-image">
+                <img src="images/banner.png" alt="">
+            </div>
+
+            
+        </div>
 
     </header>
+
     <body>
-        
+
     </body>
     <footer>
 
     </footer>
 </body>
+
 </html>
