adding main section

--- a/index.html
+++ b/index.html
@@ -59,6 +59,61 @@
             <button class="btn-primary">Explore More</button>
          </div>
         </section>
+
+        <section class="body-2">
+            <div id="main-body-2">
+                <h2 class="body-2-tittle">Features you will love & enjoy</h2>
+                <p class="body-2-para">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+                <div class="body-container">
+                    <h2 class="container-tittle">Dexktop & Mobile Version</h2>
+                    <p class="body-caption">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                </div>
+                <div class="body-container">
+                    <h2 class="container-tittle">Dexktop & Mobile Version</h2>
+                    <p class="body-caption">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                </div>
+                <div class="body-container">
+                    <h2 class="container-tittle">Dexktop & Mobile Version</h2>
+                    <p class="body-caption">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                </div>
+                <div class="body-container">
+                    <h2 class="container-tittle">Dexktop & Mobile Version</h2>
+                    <p class="body-caption">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                </div>
+            </div>
+            <div class="body-section">
+                 <div id="body-sectionn">
+                    <h1 class="body-section-tittle">10+Year</h1>
+                    <p>Experience</p>
+                 </div>
+            </div>
+        </section>
+        <section class="facts">
+            <h3 class="section-tittle">Some Facts</h3>
+            <p class="text-lightgray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
+            <div class="fact-card-container">
+                <div class="card">
+                    <img src="images/icons/ribon.png" alt="">
+                    <h2 class="cart-state">54</h2>
+                    <p class="card-tittle">Awards Winning</p>
+                </div>
+                <div class="card">
+                    <img src="images/icons/projects.png" alt="">
+                    <h2 class="cart-state">1458</h2>
+                    <p class="card-tittle">Project Finished</p>
+                </div>
+                <div class="card">
+                    <img src="images/icons/customers.png" alt="">
+                    <h2 class="cart-state">590</h2>
+                    <p class="card-tittle">Clined Worked</p>
+                </div>
+                <div class="card">
+                    <img src="images/icons/email.png" alt="">
+                    <h2 class="cart-state">22578</h2>
+                    <p class="card-tittle">Email Send</p>
+                </div>
+            </div>
+        </section>
     </body>
     <footer>
 
