adding all divice media query

--- a/index.html
+++ b/index.html
@@ -82,7 +82,8 @@
                 </div>
             </div>
             <div class="body-section">
-                 <div id="body-sectionn">
+                <img src="images/architect.png" alt="">
+                 <div id="bbody-sectionn">
                     <h1 class="body-section-tittle">10+Year</h1>
                     <p>Experience</p>
                  </div>
@@ -100,7 +101,7 @@
                 <div class="card">
                     <img src="images/icons/projects.png" alt="">
                     <h2 class="cart-state">1458</h2>
-                    <p class="card-tittle">Project Finished</p>
+                    <p class="c ard-tittle">Project Finished</p>
                 </div>
                 <div class="card">
                     <img src="images/icons/customers.png" alt="">
@@ -114,6 +115,15 @@
                 </div>
             </div>
         </section>
+
+        /*sponsor section*/
+         <section class="sponsor">
+            <h3 class="sponsor-tittle">Our Sponsor</h3>
+            <p class="banner-para">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration. </p>
+            <div class="sponsor-image">
+                <img src="images/sponsors/amazon.png" alt=""><img src="images/sponsors/figma.png" alt=""><img src="images/sponsors/google.png" alt=""><img src="images/sponsors/spotify.png" alt=""><img src="images/sponsors/telerama.png" alt="">
+            </div>
+         </section>
     </body>
     <footer>
 
