adding footer section

--- a/index.html
+++ b/index.html
@@ -83,10 +83,10 @@
             </div>
             <div class="body-section">
                 <img src="images/architect.png" alt="">
-                 <div id="bbody-sectionn">
+                 <!-- <div id="body-sectionn">
                     <h1 class="body-section-tittle">10+Year</h1>
                     <p>Experience</p>
-                 </div>
+                 </div> -->
             </div>
         </section>
         <section class="facts">
@@ -116,7 +116,7 @@
             </div>
         </section>
 
-        /*sponsor section*/
+
          <section class="sponsor">
             <h3 class="sponsor-tittle">Our Sponsor</h3>
             <p class="banner-para">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration. </p>
@@ -126,7 +126,7 @@
          </section>
     </body>
     <footer>
-
+     <p class="footer">All rights reserved copyright@2023 startup landing page design</p>
     </footer>
 </body>
 
